--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -115,6 +115,7 @@ pydocstyle:
   debian:
     buster: [pydocstyle]
     stretch: [pydocstyle]
+  gentoo: [dev-python/pydocstyle]
   ubuntu:
     artful: [pydocstyle]
     bionic: [pydocstyle]
@@ -3870,6 +3871,7 @@ python3-pep8:
   ubuntu: [python3-pep8]
 python3-pkg-resources:
   debian: [python3-pkg-resources]
+  gentoo: [dev-python/setuptools]
   ubuntu: [python3-pkg-resources]
 python3-pyparsing:
   arch: [python-pyparsing]
