Add opensplice key for Gentoo.

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3805,6 +3805,8 @@ openni-dev:
   fedora: [openni-devel]
   gentoo: [dev-libs/OpenNI]
   ubuntu: [libopenni-dev]
+opensplice:
+  gentoo: [sci-libs/opensplice]
 openssh-client:
   debian: [openssh-client]
   fedora: [openssh-clients]
