--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1764,11 +1764,15 @@ repositories:
       version: indigo-devel
     status: maintained
   dnn_detect:
+    doc:
+      type: git
+      url: https://github.com/UbiquityRobotics/dnn_detect.git
+      version: kinetic-devel
     release:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/UbiquityRobotics-release/dnn_detect-release.git
-      version: 0.0.2-0
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/UbiquityRobotics/dnn_detect.git
