octomap_pa: 1.2.0-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5893,6 +5893,11 @@ repositories:
       type: git
       url: https://github.com/TUC-ProAut/ros_octomap.git
       version: master
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/TUC-ProAut/ros_octomap-release.git
+      version: 1.2.0-0
     source:
       type: git
       url: https://github.com/TUC-ProAut/ros_octomap.git
