octomap_pa: 1.2.0-0 in 'lunar/distribution.yaml' [bloom]

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -2072,6 +2072,11 @@ repositories:
       type: git
       url: https://github.com/TUC-ProAut/ros_octomap.git
       version: master
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/TUC-ProAut/ros_octomap-release.git
+      version: 1.2.0-0
     source:
       type: git
       url: https://github.com/TUC-ProAut/ros_octomap.git
