--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -777,6 +777,7 @@ g++-static:
   arch: [gcc]
   debian: [g++]
   fedora: [gcc-c++, glibc-devel, glibc-static, libstdc++-devel, libstdc++-static]
+  gentoo: [sys-devel/gcc]
   ubuntu: [g++]
 gawk:
   arch: [gawk]
