multi_jackal: 0.0.5-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5120,6 +5120,10 @@ repositories:
       version: master
     status: developed
   multi_jackal:
+    doc:
+      type: git
+      url: https://github.com/NicksSimulationsROS/multi_jackal.git
+      version: ros-kinetic
     release:
       packages:
       - multi_jackal_base
@@ -5130,7 +5134,7 @@ repositories:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/NicksSimulationsROS/multi_jackal-release.git
-      version: 0.0.4-0
+      version: 0.0.5-0
     source:
       type: git
       url: https://github.com/NicksSimulationsROS/multi_jackal.git
