sync_params: 1.0.1-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -10148,6 +10148,21 @@ repositories:
       url: https://github.com/swri-robotics/swri_console.git
       version: master
     status: developed
+  sync_params:
+    doc:
+      type: svn
+      url: https://github.com/NicksSimulationsROS/sync_params.git
+      version: ros-kinetic
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/NicksSimulationsROS/sync_params-release.git
+      version: 1.0.1-0
+    source:
+      type: git
+      url: https://github.com/NicksSimulationsROS/sync_params.git
+      version: ros-kinetic
+    status: developed
   tango_ros:
     doc:
       type: git
