--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -10150,7 +10150,7 @@ repositories:
     status: developed
   sync_params:
     doc:
-      type: svn
+      type: git
       url: https://github.com/NicksSimulationsROS/sync_params.git
       version: ros-kinetic
     release:
