libcpprest-dev add yakkety removed sid

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1497,13 +1497,13 @@ libconsole-bridge-dev:
 libcpprest-dev:
   debian:
     buster: [libcpprest-dev]
-    sid: [libcpprest-dev]
     stretch: [libcpprest-dev]
   fedora: [cpprest-devel]
   ubuntu:
     artful: [libcpprest-dev]
     bionic: [libcpprest-dev]
     xenial: [libcpprest-dev]
+    yakkety: [libcpprest-dev]
     zesty: [libcpprest-dev]
 libdbus-dev:
   arch: [dbus-core]
