--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -10642,6 +10642,7 @@ repositories:
       url: https://github.com/roboception/rc_visard-release.git
       version: 1.2.0-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/roboception/rc_visard_ros.git
       version: master
