--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7119,6 +7119,16 @@ repositories:
       url: https://github.com/ros-planning/random_numbers.git
       version: master
     status: maintained
+  raspigibbon_apps:
+    doc:
+      type: git
+      url: https://github.com/raspberrypigibbon/raspigibbon_apps.git
+      version: kinetic-devel
+    source:
+      type: git
+      url: https://github.com/raspberrypigibbon/raspigibbon_apps.git
+      version: kinetic-devel
+    status: developed
   raspigibbon_ros:
     doc:
       type: git
