--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7149,6 +7149,16 @@ repositories:
       url: https://github.com/raspberrypigibbon/raspigibbon_ros.git
       version: kinetic-devel
     status: developed
+  raspigibbon_sim:
+    doc:
+      type: git
+      url: https://github.com/raspberrypigibbon/raspigibbon_sim.git
+      version: kinetic-devel
+    source:
+      type: git
+      url: https://github.com/raspberrypigibbon/raspigibbon_sim.git
+      version: kinetic-devel
+    status: developed
   razor_imu_9dof:
     doc:
       type: git
