--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -2606,6 +2606,7 @@ repositories:
       url: https://github.com/ros-gbp/robot_state_publisher-release.git
       version: 1.13.5-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/ros/robot_state_publisher.git
       version: kinetic-devel
