Adding realsense_ros_camera

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -10654,6 +10654,12 @@ repositories:
       url: https://github.com/intel-ros/realsense.git
       version: indigo-devel
     status: maintained
+  realsense_ros_camera:
+    doc:
+      type: git
+      url: https://github.com/intel-ros/realsense.git
+      version: development
+    status: maintained
   realtime_tools:
     doc:
       type: git
