Renaming ROS package

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -10638,6 +10638,12 @@ repositories:
       url: https://github.com/timn/ros-rcll_ros_msgs.git
       version: master
     status: developed
+  realsense2_camera:
+    doc:
+      type: git
+      url: https://github.com/intel-ros/realsense.git
+      version: development
+    status: maintained
   realsense_camera:
     doc:
       type: git
@@ -10653,12 +10659,6 @@ repositories:
       type: git
       url: https://github.com/intel-ros/realsense.git
       version: indigo-devel
-    status: maintained
-  realsense_ros_camera:
-    doc:
-      type: git
-      url: https://github.com/intel-ros/realsense.git
-      version: development
     status: maintained
   realtime_tools:
     doc:
