--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6938,6 +6938,12 @@ repositories:
       url: https://gitlab.com/jlack/rdl.git
       version: master
     status: developed
+  realsense2_camera:
+    doc:
+      type: git
+      url: https://github.com/intel-ros/realsense.git
+      version: development
+    status: maintained
   realsense_camera:
     doc:
       type: git
@@ -6953,12 +6959,6 @@ repositories:
       type: git
       url: https://github.com/intel-ros/realsense.git
       version: indigo-devel
-    status: maintained
-  realsense_ros_camera:
-    doc:
-      type: git
-      url: https://github.com/intel-ros/realsense.git
-      version: development
     status: maintained
   realtime_tools:
     doc:
