--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -10668,11 +10668,12 @@ repositories:
     release:
       packages:
       - rc_visard
+      - rc_visard_description
       - rc_visard_driver
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/roboception/rc_visard-release.git
-      version: 1.2.1-0
+      version: 2.0.0-0
     source:
       test_pull_requests: true
       type: git
