--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7287,6 +7287,26 @@ repositories:
       url: https://github.com/roboception/rc_genicam_api.git
       version: master
     status: developed
+  rc_visard:
+    doc:
+      type: git
+      url: https://github.com/roboception/rc_visard_ros.git
+      version: master
+    release:
+      packages:
+      - rc_visard
+      - rc_visard_description
+      - rc_visard_driver
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/roboception/rc_visard-release.git
+      version: 2.0.0-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/roboception/rc_visard_ros.git
+      version: master
+    status: developed
   rcll_fawkes_sim:
     doc:
       type: git
