--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7139,11 +7139,12 @@ repositories:
       - futaba_serial_servo
       - raspigibbon_bringup
       - raspigibbon_description
+      - raspigibbon_msgs
       - raspigibbon_ros
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/raspberrypigibbon/raspigibbon_ros-release.git
-      version: 0.1.1-1
+      version: 0.2.0-0
     source:
       type: git
       url: https://github.com/raspberrypigibbon/raspigibbon_ros.git
