raspigibbon_sim: 0.0.1-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7155,6 +7155,15 @@ repositories:
       type: git
       url: https://github.com/raspberrypigibbon/raspigibbon_sim.git
       version: kinetic-devel
+    release:
+      packages:
+      - raspigibbon_control
+      - raspigibbon_gazebo
+      - raspigibbon_sim
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/raspberrypigibbon/raspigibbon_sim-release.git
+      version: 0.0.1-0
     source:
       type: git
       url: https://github.com/raspberrypigibbon/raspigibbon_sim.git
