Added pyquaternion to python.yaml
added pip package pyquaternion as python-pyquaternion-pip

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2332,6 +2332,16 @@ python-pyproj:
     pip:
       packages: [pyproj]
   ubuntu: [python-pyproj]
+python-pyquaternion-pip:
+  debian:
+    pip:
+      packages: [pyquaternion]
+  fedora:
+    pip:
+      packages: [pyquaternion]
+  ubuntu:
+    pip:
+      packages: [pyquaternion]
 python-pyquery:
   debian: [python-pyquery]
   fedora: [python-pyquery]
