Adding gpxpy for gentoo

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1219,6 +1219,7 @@ python-gpxpy:
       pip:
         packages: [gpxpy]
     stretch: [python-gpxpy]
+  gentoo: [sci-geosciences/gpxpy]
   ubuntu:
     artful: [python-gpxpy]
     bionic: [python-gpxpy]
