bond_core: 1.8.1-0 in 'melodic/distribution.yaml' [bloom]

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -32,6 +32,17 @@ repositories:
       type: git
       url: https://github.com/ros/bond_core.git
       version: kinetic-devel
+    release:
+      packages:
+      - bond
+      - bond_core
+      - bondcpp
+      - bondpy
+      - smclib
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/bond_core-release.git
+      version: 1.8.1-0
     source:
       test_pull_requests: true
       type: git
