dynamic_reconfigure: 1.5.49-1 in 'melodic/distribution.yaml' [bloom]

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -118,6 +118,11 @@ repositories:
       type: git
       url: https://github.com/ros/dynamic_reconfigure.git
       version: melodic-devel
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/dynamic_reconfigure-release.git
+      version: 1.5.49-1
     source:
       test_pull_requests: true
       type: git
