[melodic] add actionlib source and doc

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -11,6 +11,17 @@ release_platforms:
   - artful
   - bionic
 repositories:
+  actionlib:
+    doc:
+      type: git
+      url: https://github.com/ros/actionlib.git
+      version: melodic-devel
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/actionlib.git
+      version: melodic-devel
+    status: maintained
   angles:
     doc:
       type: git
