use utexas-bwi indigo branches for ROS Indigo packages

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -1159,7 +1159,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/utexas-bwi/bwi.git
-      version: master
+      version: indigo
     release:
       packages:
       - bwi_desktop
@@ -1172,13 +1172,13 @@ repositories:
     source:
       type: git
       url: https://github.com/utexas-bwi/bwi.git
-      version: master
+      version: indigo
     status: developed
   bwi_common:
     doc:
       type: git
       url: https://github.com/utexas-bwi/bwi_common.git
-      version: master
+      version: indigo
     release:
       packages:
       - bwi_common
@@ -1208,7 +1208,7 @@ repositories:
     source:
       type: git
       url: https://github.com/utexas-bwi/bwi_common.git
-      version: master
+      version: indigo
     status: developed
   calibration:
     doc:
@@ -13881,7 +13881,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/utexas-bwi/segbot.git
-      version: master
+      version: indigo
     release:
       packages:
       - segbot
@@ -13902,7 +13902,7 @@ repositories:
     source:
       type: git
       url: https://github.com/utexas-bwi/segbot.git
-      version: master
+      version: indigo
     status: developed
   segway_rmp:
     doc:
