rasberry: 0.0.1-0 in 'kinetic/lcas-dist.yaml' [bloom]

--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -245,6 +245,16 @@ repositories:
       version: catkinised
     status: developed
   rasberry:
+    release:
+      packages:
+      - rasberry
+      - rasberry_des
+      - rasberry_gazebo
+      - rasberry_navigation
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/lcas-releases/rasberry.git
+      version: 0.0.1-0
     source:
       test_pull_requests: true
       type: git
@@ -645,13 +655,6 @@ repositories:
       url: https://github.com/strands-project/strands_webtools.git
       version: kinetic-devel
     status: developed
-  thorvald:
-    source:
-      test_pull_requests: true
-      type: git
-      url: https://github.com/lcas/thorvald.git
-      version: kinetic-devel
-    status: developed
   thin_navigation:
     release:
       tags:
@@ -662,6 +665,13 @@ repositories:
       type: git
       url: https://bitbucket.org/mhanheide/thin_navigation.git
       version: master
+    status: developed
+  thorvald:
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/lcas/thorvald.git
+      version: kinetic-devel
     status: developed
   turtlebot_apps:
     release:
