[dep] Add devscripts.
- debian https://packages.debian.org/sid/devscripts
- fedora https://fedora.pkgs.org/27/fedora-x86_64/devscripts-2.17.10-1.fc27.x86_64.rpm.html
- gentoo https://packages.gentoo.org/packages/dev-util/checkbashisms
- Ubuntu https://packages.ubuntu.com/search?keywords=devscripts

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -538,6 +538,11 @@ daemontools:
   debian: [daemontools]
   gentoo: [virtual/daemontools]
   ubuntu: [daemontools]
+devscripts:
+  debian: [devscripts]
+  fedora: [devscripts]
+  gentoo: [dev-util/checkbashisms]
+  ubuntu: [devscripts]
 dfu-util:
   debian: [dfu-util]
   fedora: [dfu-util]
