ddynamic_reconfigure_python: 0.0.1-0 in 'indigo/distribution.yaml' [bloom] (#17091)
* ddynamic_reconfigure_python: 0.0.1-0 in 'indigo/distribution.yaml' [bloom]

* Fix file updated with old python-rosdistro

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -2453,6 +2453,12 @@ repositories:
       url: https://bitbucket.org/dataspeedinc/dbw_mkz_ros
       version: default
     status: developed
+  ddynamic_reconfigure_python:
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/pal-gbp/ddynamic_reconfigure_python-release.git
+      version: 0.0.1-0
   declination:
     doc:
       type: git
