--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8,6 +8,16 @@ adafruit-pca9685-pip:
   ubuntu:
     pip:
       packages: [adafruit-pca9685]
+awsiotpythonsdk-pip:
+  debian:
+    pip:
+      packages: [awsiotpythonsdk]
+  fedora:
+    pip:
+      packages: [awsiotpythonsdk]
+  ubuntu:
+    pip:
+      packages: [awsiotpythonsdk]
 azure-iothub-device-client-pip:
   debian:
     pip:
