thorvald: 0.0.1-0 in 'kinetic/lcas-dist.yaml' [bloom]

--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -667,6 +667,22 @@ repositories:
       version: master
     status: developed
   thorvald:
+    release:
+      packages:
+      - thorvald_2dnav
+      - thorvald_base
+      - thorvald_bringup
+      - thorvald_can_devices
+      - thorvald_gazebo_plugins
+      - thorvald_gui
+      - thorvald_model
+      - thorvald_msgs
+      - thorvald_teleop
+      - thorvald_twist_mux
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/LCAS/thorvald-releases.git
+      version: 0.0.1-0
     source:
       test_pull_requests: true
       type: git
