Adding topics_rviz_plugin to documentation index for kinetic

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -10554,6 +10554,12 @@ repositories:
       type: git
       url: https://github.com/tu-darmstadt-ros-pkg/topic_proxy.git
       version: master
+  topics_rviz_plugin:
+    doc:
+      type: git
+      url: https://gitlab.com/InstitutMaupertuis/topics_rviz_plugin.git
+      version: kinetic
+    status: developed
   towr:
     doc:
       type: git
