pr2_navigation_apps: 1.0.2-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -9762,6 +9762,26 @@ repositories:
       url: https://github.com/pr2/pr2_navigation.git
       version: hydro-devel
     status: maintained
+  pr2_navigation_apps:
+    doc:
+      type: git
+      url: https://github.com/PR2/pr2_navigation_apps.git
+      version: hydro-devel
+    release:
+      packages:
+      - pr2_2dnav
+      - pr2_2dnav_local
+      - pr2_2dnav_slam
+      - pr2_navigation_apps
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/UNR-RoboticsResearchLab/pr2_navigation_apps-release.git
+      version: 1.0.2-0
+    source:
+      type: git
+      url: https://github.com/PR2/pr2_navigation_apps.git
+      version: hydro-devel
+    status: maintained
   pr2_power_drivers:
     doc:
       type: git
