Add cantools and pandacan python (pip) packages
Adding [cantools](https://pypi.python.org/pypi/cantools/5.2.0) python pip package (not available in Ubuntu repos).

Adding [pandacan](https://github.com/commaai/panda) python pip package (not available in Ubuntu repos).

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -486,6 +486,10 @@ python-cairo:
     slackpkg:
       packages: [pycairo]
   ubuntu: [python-cairo]
+python-cantools:
+  ubuntu:
+    pip:
+      packages: [cantools]
 python-catkin-lint:
   fedora: [python-catkin_lint]
   ubuntu: [python-catkin-lint]
@@ -1946,6 +1950,10 @@ python-paho-mqtt-pip:
   ubuntu:
     pip:
       packages: [paho-mqtt]
+python-pandacan:
+  ubuntu:
+    pip:
+      packages: [pandacan]
 python-pandas:
   arch: [python2-pandas]
   debian: [python-pandas]
