Following guidelines for -pip suffix + add debian

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -486,7 +486,10 @@ python-cairo:
     slackpkg:
       packages: [pycairo]
   ubuntu: [python-cairo]
-python-cantools:
+python-cantools-pip:
+  debian:
+    pip:
+      packages: [cantools]
   ubuntu:
     pip:
       packages: [cantools]
@@ -1950,7 +1953,10 @@ python-paho-mqtt-pip:
   ubuntu:
     pip:
       packages: [paho-mqtt]
-python-pandacan:
+python-pandacan-pip:
+  debian:
+    pip:
+      packages: [pandacan]
   ubuntu:
     pip:
       packages: [pandacan]
