--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -9872,14 +9872,17 @@ repositories:
     release:
       packages:
       - imu_monitor
+      - pr2_bringup
+      - pr2_camera_synchronizer
       - pr2_computer_monitor
       - pr2_controller_configuration
       - pr2_ethercat
+      - pr2_robot
       - pr2_run_stop_auto_restart
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/pr2-gbp/pr2_robot-release.git
-      version: 1.6.23-1
+      version: 1.6.24-0
     source:
       type: git
       url: https://github.com/pr2/pr2_robot.git
