--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: python
 
-python: "2.7"
+python:
+  - "2.7"
+  - "3.6"
+
+matrix:
+  allow_failures:
+    - python: "3.6"
 
 sudo: false
 
