Adding ifm_o3mxxx to documentation index for kinetic

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3237,6 +3237,16 @@ repositories:
       url: https://github.com/ahornung/humanoid_msgs.git
       version: devel
     status: maintained
+  ifm_o3mxxx:
+    doc:
+      type: git
+      url: https://github.com/takiaine/ifm_o3mxxx.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/takiaine/ifm_o3mxxx.git
+      version: master
+    status: maintained
   ifopt:
     doc:
       type: git
