turtlebot3: 0.2.0-0 in 'kinetic/distribution.yaml' [bloom] (#17112)

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -10644,13 +10644,14 @@ repositories:
       - turtlebot3
       - turtlebot3_bringup
       - turtlebot3_description
+      - turtlebot3_example
       - turtlebot3_navigation
       - turtlebot3_slam
       - turtlebot3_teleop
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/ROBOTIS-GIT-release/turtlebot3-release.git
-      version: 0.1.6-0
+      version: 0.2.0-0
     source:
       test_pull_requests: true
       type: git
