turtlebot3_simulations: 0.2.0-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -10682,12 +10682,13 @@ repositories:
     release:
       packages:
       - turtlebot3_fake
-      - turtlebot3_gazebo
+      - turtlebot3_gazebo_plugin
+      - turtlebot3_gazebo_ros
       - turtlebot3_simulations
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/ROBOTIS-GIT-release/turtlebot3_simulations-release.git
-      version: 0.1.7-0
+      version: 0.2.0-0
     source:
       test_pull_requests: true
       type: git
