--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -8511,13 +8511,15 @@ repositories:
     release:
       packages:
       - rosflight
+      - rosflight_firmware
       - rosflight_msgs
       - rosflight_pkgs
+      - rosflight_sim
       - rosflight_utils
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/rosflight/rosflight-release.git
-      version: 0.1.3-0
+      version: 1.0.0-0
     source:
       type: git
       url: https://github.com/rosflight/rosflight.git
