Use release-6.3 branch instead of the v6.3.1 tag

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1633,7 +1633,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/dartsim/dart.git
-      version: v6.3.1
+      version: release-6.3
   dataspeed_can:
     doc:
       type: hg
