--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1623,6 +1623,17 @@ repositories:
       url: https://github.com/leggedrobotics/darknet_ros.git
       version: master
     status: developed
+  dartsim:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/dartsim/ros-dartsim-release.git
+      version: 6.3.1-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/dartsim/dart.git
+      version: release-6.3
   dataspeed_can:
     doc:
       type: hg
